--- a/projeto_07/public_html/index.html
+++ b/projeto_07/public_html/index.html
@@ -11,7 +11,7 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-  <nav class="blue accent-4" role="navigation">
+  <nav class="blue accent-3" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">DAST</a>
       <ul class="right hide-on-med-and-down">
@@ -40,7 +40,7 @@
                         <label for="first_name">Insira seu e-mail:</label>
                     </div><!--input-field-->
                     <div class="input-field">
-                        <button class="btn waves-effect waves-light blue accent-4" type="submit" name="action">Enviar
+                        <button class="btn waves-effect waves-light blue accent-3" type="submit" name="action">Enviar
                             <i class="material-icons right">send</i>
                         </button>
                     </div><!--input-field-->
@@ -219,7 +219,7 @@
                         </div><!--input-field-col-s12-->
                     </div><!--row-->
                     <div class="row">
-                        <button class="btn waves-effect waves-light blue accent-4" type="submit" name="action">Enviar
+                        <button class="btn waves-effect waves-light blue accent-3" type="submit" name="action">Enviar
                             <i class="material-icons right">send</i>
                         </button>
                     </div><!--row-->
@@ -230,6 +230,32 @@
         </div><!--container-->
         
     </div><!--section-->
+    
+    <footer class="page-footer purple accent-2">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2014 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+    </footer>
 
   <!--Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
