--- a/projeto_07/public_html/index.html
+++ b/projeto_07/public_html/index.html
@@ -209,7 +209,7 @@
                     <div class="row">
                         <div class="input-field col s12">
                           <input id="email" type="email" class="validate">
-                          <label for="email">Email</label>
+                          <label for="email">E-mail</label>
                         </div><!--input-field-col-s12-->
                     </div><!--row-->
                     <div class="row">
